Java 21 LTS added instead of EA