@@ -63,8 +63,6 @@
                     <release>${java.version}</release>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
-                        <arg>--add-modules</arg>
-                        <arg>jdk.incubator.concurrent</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -79,7 +77,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Shaded plugin for fat executebale JAR file -->
+            <!-- Shaded plugin for fat executable JAR file -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
